<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="866dp"
            android:layout_height="616dp"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/dp_30"
            android:background="@drawable/shape_30radius_white_color_fill"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:text="@string/inueva_actualizaci_n"
                android:textColor="@color/text_dark_color"
                android:textSize="@dimen/text_size_48"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_update_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_26"
                android:text="@string/v_xx_ya_est_disponible_para_actualizar"
                android:textColor="@color/text_dark_color"
                android:textSize="@dimen/text_size_36"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />


            <com.ianlee.lazy.base.lib.view.appupdate.dialog.NumberProgressBar
                android:id="@+id/np_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_55"
                android:layout_marginEnd="@dimen/dp_55"
                android:layout_marginBottom="@dimen/dp_30"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/cl_bottom_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/cl_bottom_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_55"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_55"
                android:layout_marginBottom="@dimen/dp_55"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">


                <TextView
                    android:id="@+id/tv_now_update"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:background="@drawable/shape_17radius_4e5969"
                    android:gravity="center"
                    android:text="@string/update1m_s_tarde"

                    android:textColor="@color/color_white"
                    android:textSize="@dimen/text_size_36" />

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="@dimen/dp_16"
                    android:background="@drawable/shape_17radius_line_4e5969"
                    android:gravity="center"

                    android:text="@string/update1actualizar_ahora"
                    android:textColor="#4e5969"
                    android:textSize="@dimen/text_size_36" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="282.8dp"
            android:layout_height="271.6dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_55"
            android:background="@mipmap/ic_update_app_head" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
